# pyprize

./: .gitignore  Dockerfile  README.md  candidates.csv.example  pyproject.toml  requirements-dev.txt
.github/workflows/: code-style.yml  pip-audit.yml
app/: main.py
app/static/css/: main.css
app/static/js/: pyprize.js
app/static/themes/KiwiPyCon2024/: theme.css
app/templates/: admin.html  base.html  index.html
pyprize/: __init__.py  admin.py  auth.py  core.py  db.py  models.py  settings.py  utils.py
pyprize/static/js/: admin.js  draw_candidates.js  pyprize.js
pyprize/static/themes/KiwiPyCon2024/: theme.css
pyprize/templates/: base.html
pyprize/templates/admin/: index.html
pyprize/templates/core/: index.html
